--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,9 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
   <script src="https://kit.fontawesome.com/aa7a9d0c86.js" crossorigin="anonymous"></script>
 
-  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
+  <!-- <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down-circle" viewBox="0 0 16 16">
     <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v5.793L5.354 8.146a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0l3-3a.5.5 0 0 0-.708-.708L8.5 10.293V4.5z"/>
-  </svg>
+  </svg> -->
 
 </head>
 <body>
@@ -54,7 +54,8 @@
       <div class="cube"></div>
       <div class="cube"></div>
       <div class="cube"></div>
-     <div class="cube"></div>
+      <div class="cube"></div>
+      <div class="cube"></div>
    </div>
     <div class="container">
       <br><br>
@@ -72,9 +73,10 @@
             Health<br> 
             Connect
           </h1>
+          <h3>Fast Medical Access Made Easy</h3>
         </div>
       </div>
-
+      <br><br>
       <div class="row">
         <div class="col h-100 text-center">
           <a href="http://localhost:5000/preferences">
@@ -217,9 +219,6 @@
     </button></a>
   </section>
   <!-- End Our Team -->
-
-
-
 
   <!-- jQuery library -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
