Co-authored-by: mufengl <mufengl@users.noreply.github.com> Co-authored-by: topcheese044 <topcheese044@users.noreply.github.com> Co-authored-by: Jamie Tsai <JamieTsai1024@users.noreply.github.com>

--- a/templates/application.html
+++ b/templates/application.html
@@ -21,7 +21,7 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-md bg-dark"> 
+  <nav class="navbar navbar-expand-md bg-dark">
     <div class="container">
 
       <!-- Website name -->
@@ -40,8 +40,8 @@
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="http://localhost:5000/#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="http://localhost:5000/#team">Our Team</a></li>
-          <li class="nav-item"><a class="nav-link active" href="http://localhost:5000/preferences">Try It Out!</a></li>
-        </ul> 
+          <li class="nav-item"><a class="nav-link active" href="http://localhost:5000/application">Try It Out!</a></li>
+        </ul>
       </div>
 
     </div>
@@ -51,52 +51,51 @@
   <div class="container" style='height: 90%; display: flex; justify-content: center; align-items: center; '>
     <div class="row">
 
-      <div class="col-sm-4 form-div" >
-       
+      <div class="col-sm-4 form-div">
+
         <h1 style="text-align: left">Welcome</h1>
         <i>
           <h4 style="text-align: left">We're here to help!</h4>
         </i>
 
-        <!-- <form method="GET">
-          <br><br>
-          <label for="sel1">Province</label>
-          <select class="form-control" id="sel1" name="provinceSelect">
-            <option value="Select Option" selected disabled>Select Option</option>
-            <option value="ab">Alberta</option>
-            <option value="bc">British Columbia</option>
-            <option value="mb">Manitoba</option>
-            <option value="nb">New Brunswick</option>
-            <option value="nl">Newfoundland & Labrador</option>
-            <option value="nt">North West Territories</option>
-            <option value="ns">Nova Scotia</option>
-            <option value="nu">Nunavut</option>
-            <option value="on">Ontario</option>
-            <option value="pe">Prince Edward Island</option>
-            <option value="qu">Quebec</option>
-            <option value="sk">Saskatchewan</option>
-            <option value="yt">Yukon Territories</option>
-          </select>
-          <br>
-          <label for="sel2">Facility Type</label>
-          <select class="form-control" id="sel2" name="typeSelect">
-            <option value="Select Option" selected disabled>Select Option</option>
-            <option value="ambulatory">Ambulatory care (including clinics)</option>
-            <option value="hospitals">Hospitals</option>
-            <option value="nursing">Nursing and residential care facilities</option>
-          </select>
-          <br>
-          <label for="inputMax">Max Wait Time (Hours)</label>
-          <input type="number" class="form-control" id="inputMax" min="1" max="24" name="waitTime">
-          <br><br>
-          <button type="submit" class="btn btn-outline-success">Filter</button>
-        </form> -->
-        {% block content %}{% endblock %}
+        <div class="content-section">
+          <form method="POST" action="">
+            {{ form.hidden_tag() }}
+            <fieldset class="form-group">
+
+              <!-- Province input-->
+              <div class="form-group">
+                {{ form.province.label(class="form-control-label") }}
+                {{ form.province(class="form-control form-control-lg") }}
+              </div>
+              <!-- Facilities input -->
+              <div class="form-group">
+                {{ form.facility.label(class="form-control-label") }}
+                {{ form.facility(class="form-control form-control-lg") }}
+              </div>
+              <!-- Wait Time input -->
+              <div class="form-group">
+                {{ form.wait_time.label(class="form-control-label") }}
+                {{ form.wait_time(class="form-control form-control-lg") }}
+              </div>
+            </fieldset>
+            <!-- Submit -->
+            <div class="form-group">
+              {{ form.submit(class="btn btn-outline-info") }}
+            </div>
+          </form>
+        </div>
 
       </div>
 
       <div class="col-sm-8" id="mainContainer">
-        {% if hasData %}
+
+        {% if hasNoData %}
+        <div class="alert alert-danger text-center" role="alert">
+          No Results Fit Your Criteria
+        </div>
+        {% endif %}
+
         <table class="table table-hover">
           <tbody>
             <tr>
@@ -104,18 +103,21 @@
               <th scope="col">{{col}}</th>
               {% endfor %}
             </tr>
-            {% for facility_type, facility_name, location, longitude, latitude, wait_time, total_time in row_data %}
+            {% for facility_type, facility_name, location, longitude, latitude, wait_time, drive_time, total_time in row_data %}
 
             <tr>
               <!-- Icon -->
               <td>
                 {% if facility_type|string() == 'Ambulatory health care services' %}
-                <img data-toggle="tooltip" title="Ambulatory health care services" src="{{ url_for('static', filename='images/ambulance.png') }}" width="60px" id="">
+                <img data-toggle="tooltip" title="Ambulatory health care services"
+                  src="{{ url_for('static', filename='images/ambulance.png') }}" width="60px" id="">
                 </img>
                 {% elif facility_type|string() == 'Nursing and residential care facilities' %}
-                <img data-toggle="tooltip" title="Nursing and residential care facilities" src="{{ url_for('static', filename='images/nursing.png') }}" width="60px"> </img>
+                <img data-toggle="tooltip" title="Nursing and residential care facilities"
+                  src="{{ url_for('static', filename='images/nursing.png') }}" width="60px"> </img>
                 {% else %}
-                <img data-toggle="tooltip" title="Hospital" src="{{ url_for('static', filename='images/hospital.png') }}" width="60px"></img>
+                <img data-toggle="tooltip" title="Hospital"
+                  src="{{ url_for('static', filename='images/hospital.png') }}" width="60px"></img>
                 {% endif %}
               </td>
               <!-- Facility Name -->
@@ -125,27 +127,43 @@
               <!-- Location -->
 
               <td>
-                <a href="{{'https://maps.google.com/?ll=' +  longitude|string()  + ',' + latitude|string() }}">{{ location }}</a>
+                <a href="{{'https://maps.google.com/?ll=' +  longitude|string()  + ',' + latitude|string() }}">{{
+                  location }}</a>
               </td>
 
               <!-- Wait Time -->
-              {% if not wait_time > 60 %}
+              {% if not wait_time > 60 %} 
               <td>
                 {{ wait_time }} Minutes
               </td>
+            
               {% else %}
               <td>
                 {{ (wait_time//60)|int }} Hours and {{ (wait_time-((wait_time//60)*60))|round|int }} Minutes
               </td>
               {% endif %}
+
+              <!-- Drive Time -->
+              {% if not drive_time > 60 %}
+              <td>
+                {{ drive_time }} Minutes
+              </td>
+              
+              {% else %}
+              <td>
+                {{ (drive_time//60)|int }} Hours and {{ (drive_time-((drive_time//60)*60))|round|int }} Minutes
+              </td>
+              {% endif %}
+
               <!-- Total Time -->
               {% if not total_time > 60 %}
               <td>
                 {{ total_time }} Minutes
               </td>
+              
               {% else %}
               <td>
-                {{ total_time//60 }} Hours and {{ (total_time-((total_time//60)*60))|round|int }} Minutes
+                {{ (total_time//60)|int }} Hours and {{ (total_time-((total_time//60)*60))|round|int }} Minutes
               </td>
               {% endif %}
 
@@ -154,15 +172,8 @@
             {% endfor %}
           </tbody>
         </table>
-        {% else %}
 
-        <p>
-          ur too strict man
-        </p>
-        
-        {% endif %}
 
-        
 
       </div>
     </div>
@@ -182,7 +193,7 @@
 </html>
 
 <script>
-  $(document).ready(function(){
-    $('[data-toggle="tooltip"]').tooltip();   
+  $(document).ready(function () {
+    $('[data-toggle="tooltip"]').tooltip();
   });
-  </script>
+</script>
