--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
           <li class="nav-item"><a class="nav-link" href="#team">Our Team</a></li>
-          <li class="nav-item"><a class="nav-link" href="http://localhost:5000/preferences">Try It Out!</a></li>
+          <li class="nav-item"><a class="nav-link" href="http://localhost:5000/application">Try It Out!</a></li>
         </ul> 
       </div>
 
@@ -79,7 +79,7 @@
       <br><br>
       <div class="row">
         <div class="col h-100 text-center">
-          <a href="http://localhost:5000/preferences">
+          <a href="http://localhost:5000/application">
             <button class=button>
               Try It Out!
             </button>
@@ -158,11 +158,9 @@
   </section>
   <!-- End About -->
 
-  
   <!-- Our Team -->
   <section id="team">
     <div id="teamdiv">
-
     
       <!-- Title -->
       <div class="row" style="margin: 0">
@@ -179,7 +177,7 @@
       <div class="row" style="display: flex; align-items: center; margin: 0;">
         <div class="col" style="display: inline">
           <div class="card">
-            <img class="card-img-top" src="./static/images/icon.png" alt="Mufeng Liu">
+            <img class="card-img-top" src="./static/images/mufeng_cropped.jpg" alt="Mufeng Liu">
             <div class="card-body">
               <h5 class="card-title">Mufeng Liu</h5>
             </div>
@@ -195,7 +193,7 @@
         </div>
         <div class="col" style="display: inline">
           <div class="card">
-            <img class="card-img-top" src="./static/images/icon.png" alt="Mufeng Liu">
+            <img class="card-img-top" src="./static/images/jeffrey.png" alt="Mufeng Liu">
             <div class="card-body">
               <h5 class="card-title">Jeffrey Zhang</h5>
             </div>
@@ -203,7 +201,7 @@
         </div>
         <div class="col" style="display: inline">
           <div class="card">
-            <img class="card-img-top" src="./static/images/icon.png" alt="Mufeng Liu">
+            <img class="card-img-top" src="./static/images/razi.jpg" alt="Mufeng Liu">
             <div class="card-body">
               <h5 class="card-title">Razi Syed</h5>
             </div>
