Co-authored-by: mufengl <mufengl@users.noreply.github.com> Co-authored-by: topcheese044 <topcheese044@users.noreply.github.com> Co-authored-by: Jamie Tsai <JamieTsai1024@users.noreply.github.com>

--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@
             Health<br> 
             Connect
           </h1>
-          <h3>Fast Medical Access Made Easy</h3>
+          <h3>Medical Access Made Easy</h3>
         </div>
       </div>
       <br><br>
@@ -185,7 +185,7 @@
         </div>
         <div class="col" style="display: inline">
           <div class="card">
-            <img class="card-img-top" src="./static/images/icon.png" alt="Mufeng Liu">
+            <img class="card-img-top" src="./static/images/jamie.png" alt="Jamie Tsai">
             <div class="card-body">
               <h5 class="card-title">Jamie Tsai</h5>
             </div>
@@ -193,7 +193,7 @@
         </div>
         <div class="col" style="display: inline">
           <div class="card">
-            <img class="card-img-top" src="./static/images/jeffrey.png" alt="Mufeng Liu">
+            <img class="card-img-top" src="./static/images/jeffrey.png" alt="Jeffrey Zhang">
             <div class="card-body">
               <h5 class="card-title">Jeffrey Zhang</h5>
             </div>
@@ -201,7 +201,7 @@
         </div>
         <div class="col" style="display: inline">
           <div class="card">
-            <img class="card-img-top" src="./static/images/razi.jpg" alt="Mufeng Liu">
+            <img class="card-img-top" src="./static/images/razi.jpg" alt="Razi Syed">
             <div class="card-body">
               <h5 class="card-title">Razi Syed</h5>
             </div>
