--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@
             Health<br> 
             Connect
           </h1>
-          <h3>Medical Access Made Easy</h3>
+          <!-- <h3>Medical Access Made Easy</h3> -->
         </div>
       </div>
       <br><br>
@@ -92,7 +92,7 @@
       <br>    
 
       <!-- Scroll down button -->
-      <div class="row" style="position: absolute; bottom: 10%; width: auto; left: 50%; transform: translateX(-50%)">
+      <div class="row" style="position: absolute; bottom: 5%; width: auto; left: 50%; transform: translateX(-50%)">
         <div class="col text-center"> 
           <a href="#about">
             <div class="scroll-down-button">
@@ -118,7 +118,7 @@
         <br><br>
 
         <h1 style="text-align:left; font-size: 48px;">
-          Our mission
+          Our Mission
         </h1><br>
         <h3 style="font-size: 24px;">
           Everyone has had the experience of going to a clinic, or emergency room, only to wait for hours upon hours without resolution. At Health Connect, we understand this frustration and aim to reduce the stress and hesitancy caused by healthcare by providing everyone with an accessible and intuitive platform with information on your nearby hospitals and clinics! 
