--- a/static/styles.css
+++ b/static/styles.css
@@ -8,7 +8,6 @@ html, body {
   font-family:'Poppins', sans-serif;
   scroll-behavior: smooth;
   height: 100%;
-  /* overflow-x: hidden; */
 }
 
 .row {
@@ -44,7 +43,27 @@ section {
   color: white;
 }
 
-.scroll-down-button:hover i {
+.scroll-down-button:active {
+  transform: translateY(15px);
+}
+
+.table-overflow {
+  height: 500px !important;
+  overflow: auto !important;
+  padding: 0px;
+}
+
+.theadstick th{
+  position: sticky;
+  top:0;
+  z-index: 1;
+  background-color: white;
+  margin: 0px !important;
+}
+
+.tablestrat {
+  border-collapse: separate;
+  border-spacing: 0;
 }
 
 /* Button */
@@ -186,6 +205,7 @@ h5 {
   background-color: rgb(47, 50, 56);
   box-shadow: 0 2px rgb(182, 182, 182);
   transform: translate(-50%, -10px);
+  outline: none;
 }
 
 .background {
