--- a/static/styles.css
+++ b/static/styles.css
@@ -230,7 +230,7 @@ h5 {
   border-radius: 1px;
   transform-origin: top left;
   transform: scale(0) rotate(0deg) translate(-50%, -50%);
-  animation: cube 12s ease-in forwards infinite;
+  animation: cube 12s ease-out forwards infinite;
 }
 /* .cube:nth-child(2n) {
   border-color: #fff ;
